Página temporária auxiliar para representar mudança de páginas

--- a/calculus.html
+++ b/calculus.html
@@ -25,7 +25,7 @@
 
 			<article>
 				<h1>YOUTUBE VÍDEO</h1>
-				<button>SIM! Eu quero maiores notas em Cálculo!</button>
+				<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
 				<h5>Imagem dos meios de pagamento</h5>
 			</article>
 		</section>
@@ -77,7 +77,7 @@
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum repellendus, dolores necessitatibus aut facilis alias quisquam earum voluptate reprehenderit exercitationem, distinctio at aliquid? Commodi beatae, error delectus minima cumque fugiat. Ipsum dolor sit amet, consectetur adipisicing elit. Vel possimus labore, nesciunt voluptates, cum suscipit architecto ullam quisquam laboriosam. Consectetur consequuntur sequi laudantium culpa excepturi possimus nihil eius velit porro. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus nostrum, omnis nihil quo earum adipisci eum eaque saepe modi aspernatur cupiditate optio asperiores neque facere possimus, quisquam repellendus amet! Deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt veniam ex voluptatem sed perferendis beatae maiores repudiandae laudantium qui fuga molestiae facere eum perspiciatis accusantium, vitae! Illo placeat cupiditate iure.
 				</p>
-				<button>SIM! Eu quero maiores notas em Cálculo!</button>
+				<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
 				<h5>Imagem dos meios de pagamento</h5>
 			</article>
 		</div>
