--- a/calculus.html
+++ b/calculus.html
@@ -13,18 +13,18 @@
 	
 	<main>
 		<section>
-			<h1>Atenção alunos de cálculo...</h1>
+			<p>Atenção alunos de cálculo...</p>
 			<article>
-				<p>
+				<h1>
 					O único curso online que ensina </br>
 					derivadas e integrais </br>
-					em apenas 4 semanas partindo do zero</br>
+					em apenas 4 semanas partindo do zero </br>
 					mesmo que você não seja muito bom em matemática.
-				</p>
+				</h1>
 			</article>
 
 			<article>
-				<h1>YOUTUBE VÍDEO</h1>
+				<h2>YOUTUBE VÍDEO</h2>
 				<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
 				<h5>Imagem dos meios de pagamento</h5>
 			</article>
@@ -36,35 +36,64 @@
 
 		<article>
 			<h3>Introdução à derivadas</h3>
+			<p>
+				Entenda de forma definitiva o que são derivadas, como podem ser utilizadas e as regras que são aplicadas para sua resolução.
+			</p>
 		</article>
 		
 		<article>
 			<h3>Regra da Cadeia</h3>
+			<p>
+				Aprenda esta notável técnica que vai aumentar em até 3x sua capacidade para resolver derivadas.
+			</p>
 		</article>
 
 		<article>
 			<h3>Introdução à Integrais</h3>
+			<p>
+				Entenda o que são integrais, de que forma podem ser utilizadas e as regras que são aplicadas para sua resolução.
+			</p>
 		</article>
 
 		<article>
 			<h3>Integral Indefinida</h3>
+			<p>
+				Descubra como o método da substituição e da integração por partes podem facilmente ser utilizados para resolver este tipo de integral.
+			</p>
 		</article>
 
 		<article>
 			<h3>Teorema Fundamental do Cálculo</h3>
+			<p>
+				Como usar este poderoso conhecimento para se tornar um profundo conhecedor de derivadas integrais.
+			</p>
 		</article>
 
 		<article>
 			<h3>Integral Definida</h3>
+			<p>
+				Veja como após seus estudos de integral indefinida você está pronto para evoluir seus conhecimentos aprendendo novas técnicas e práticas para identificar e resolver integrais definidas.
+			</p>
 		</article>
 
 		<article>
 			<h3>Resolução de exercícios</h3>
+			<p>Costuma travar ou ter o famoso "branco" na hora de resolver exercícios? </p>
+			<p>
+				Aprenda na prática com diversos exercícios de derivadas, integrais e suas aplicações. Todos resolvidos passo a passo utilizando várias técnicas que vão turbinar sua agilidade e precisão.
+			</p>
 		</article>
 
 		<article>
 			<h3>E muito mais...</h3>
+			<p>
+				E não para por aí. Diversos outros conteúdos que vão fazer você se tornar um especialista na resolução de derivadas e integrais.
+			</p>
 		</article>
+	</section>
+
+	<section>
+		
 	</section>
 
 	<section>
@@ -86,5 +115,6 @@
 	<footer>
 		
 	</footer>
+
 </body>
 </html>
