Inclusão dos termos da garantia

--- a/calculus.html
+++ b/calculus.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		Cälculus
+		CälculuS
 	</header>
 	
 	<main>
@@ -93,7 +93,29 @@
 	</section>
 
 	<section>
-		
+		<h2>Mais de X Reais em Bônus (Tudo Grátis!)</h2>
+		<article>
+			<h3>Aplicações de Derivadas</h3>
+			<p>
+				Tenha acesso a diversos exemplos que te mostram passo a passo os mais diversos usos das derivadas para resolução de problemas comuns em nossa sociedade. Entenda de uma vez por todas a importância do Cálculo em nossas vidas.
+			</p>
+		</article>
+
+		<article>
+			<h3>Aplicações de Integrais</h3>
+			<p>
+				Entenda de que forma a teoria de integral pode fazer total diferença na resolução de problemas. Descubra como usar este incrível a seu favor.
+			</p>
+		</article>
+
+		<article>
+			<h3>6 meses de acesso grátis</h3>
+			<p>
+				Ofereço à você mais 6 meses de acesso gratuito a todo conteúdo do curso. Tenha, então, 12 meses de acesso completo ao curso. Todo este tempo te dá muito mais tranquilidade em seus estudos e isto absolutamente vai aumentar e muito seus resultados.
+			</p>
+			<p>Aproveite este incrível bônus!</p>
+			<p>Obs.: Por tempo limitado.</p>
+		</article>
 	</section>
 
 	<section>
@@ -103,9 +125,27 @@
 			</article>
 			<article>
 				<h2>Garantia de 30 dias. Risco Zero. 100% de Satisfação.</h2>
+				
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum repellendus, dolores necessitatibus aut facilis alias quisquam earum voluptate reprehenderit exercitationem, distinctio at aliquid? Commodi beatae, error delectus minima cumque fugiat. Ipsum dolor sit amet, consectetur adipisicing elit. Vel possimus labore, nesciunt voluptates, cum suscipit architecto ullam quisquam laboriosam. Consectetur consequuntur sequi laudantium culpa excepturi possimus nihil eius velit porro. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus nostrum, omnis nihil quo earum adipisci eum eaque saepe modi aspernatur cupiditate optio asperiores neque facere possimus, quisquam repellendus amet! Deleniti. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt veniam ex voluptatem sed perferendis beatae maiores repudiandae laudantium qui fuga molestiae facere eum perspiciatis accusantium, vitae! Illo placeat cupiditate iure.
+					Eu sei que você está passando por uma fase muito importante em sua vida, um curso universitário...
 				</p>
+
+				<p>
+					Então quero que você tenha total e completa confiança ao adquirir o curso CälculuS!
+				</p>
+
+				<p>
+					Assista as aulas, pratique os exercícios e estude o conteúdo por pelo menos 1 hora por dia. Tudo isso por até 30 dias completos!
+				</p>
+
+				<p>
+					Durante este período, se você não notar CLARAMENTE uma melhora em seus conhecimentos de derivadas e/ou integrais... Ou até mesmo se você não gostar do som da minha voz... 	
+				</p>
+
+				<p>
+					Basta você mandar um e-mail para faleconosco.calculus@gmail.com pedindo seu reembolso e eu devolvo TODO o seu dinheiro... Sem perguntas, sem enrolação, sem encheção de saco...
+				</p>
+
 				<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
 				<h5>Imagem dos meios de pagamento</h5>
 			</article>
