Colocação do footer e alguns ajustes

--- a/calculus.html
+++ b/calculus.html
@@ -95,6 +95,7 @@
 	<section>
 		<h2>Mais de X Reais em Bônus (Tudo Grátis!)</h2>
 		<article>
+			<p>lapis cruzando regua</p>
 			<h3>Aplicações de Derivadas</h3>
 			<p>
 				Tenha acesso a diversos exemplos que te mostram passo a passo os mais diversos usos das derivadas para resolução de problemas comuns em nossa sociedade. Entenda de uma vez por todas a importância do Cálculo em nossas vidas.
@@ -102,6 +103,7 @@
 		</article>
 
 		<article>
+			<p>https://www.iconfinder.com/icons/307157/design_development_drawing_graphic_prototyping_ruler_tools_icon esquadro</p>
 			<h3>Aplicações de Integrais</h3>
 			<p>
 				Entenda de que forma a teoria de integral pode fazer total diferença na resolução de problemas. Descubra como usar este incrível a seu favor.
@@ -109,6 +111,7 @@
 		</article>
 
 		<article>
+			<p>calendar flat icon </p>
 			<h3>6 meses de acesso grátis</h3>
 			<p>
 				Ofereço à você mais 6 meses de acesso gratuito a todo conteúdo do curso. Tenha, então, 12 meses de acesso completo ao curso. Todo este tempo te dá muito mais tranquilidade em seus estudos e isto absolutamente vai aumentar e muito seus resultados.
@@ -153,7 +156,14 @@
 	</section>
 
 	<footer>
-		
+		<nav>
+			<ul>
+				<li>Copyright 2016 - CälculuS - Todos Direitos Reservados</li>
+				<li> <a href="termosdeuso.html">Termos de Uso </a></li>
+				<li> <a href="politica.html">Política de Privacidade </a></li>
+				<li><a href="otrapagina.html">Membros</li>
+			</ul>
+		</nav>
 	</footer>
 
 </body>
