Inclusão de tutorial para trocar o domínio no githubpages

--- a/otrapagina.html
+++ b/otrapagina.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 	<h1>Outra Página</h1>
+	<h2>After: Existing Habit</h2>
+	<h2>I will: new Habit</h2>
+
+	<h3>
+		<p>Link para customizar o domínio github: </p>
+		<p>http://blog.da2k.com.br/2015/02/05/segredos-do-github-hospedando-seu-site-no-github/</p>
+	</h3>
 </body>
 </html>
 
