--- a/calculus.html
+++ b/calculus.html
@@ -7,8 +7,13 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header>
-		CälculuS
+	<header>		
+		<img
+			sizes="(max-width: 164px) 100vw, 164px"
+			srcset="../imagens/logotipo-calculus_vz4sdt_c_scale,w_164.png 184w"
+			src="../imagens/logotipo-calculus_vz4sdt_c_scale,w_164.png"
+			alt=""
+		>
 	</header>
 	
 	<main>
