--- a/calculus.html
+++ b/calculus.html
@@ -29,14 +29,16 @@
 			</article>
 
 			<article>
-				<h2>YOUTUBE VÍDEO</h2>
+				<p>
+					<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+				</p>
 				<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
 				<h5>Imagem dos meios de pagamento</h5>
 			</article>
 		</section>
 	</main>
 
-	<section>
+	<!-- <section>
 		<h2>Confira o que você vai aprender</h2>
 
 		<article>
@@ -169,7 +171,7 @@
 				<li><a href="otrapagina.html">Membros</li>
 			</ul>
 		</nav>
-	</footer>
+	</footer> -->
 
 </body>
 </html>
