--- a/calculus.html
+++ b/calculus.html
@@ -10,25 +10,23 @@
 	<header>		
 		<img
 			sizes="(max-width: 164px) 100vw, 164px"
-			srcset="../imagens/logotipo-calculus_vz4sdt_c_scale,w_164.png 184w"
-			src="../imagens/logotipo-calculus_vz4sdt_c_scale,w_164.png"
+			srcset="./imagens/logotipo-calculus_vz4sdt_c_scale,w_164.png 184w"
+			src="./imagens/logotipo-calculus_vz4sdt_c_scale,w_164.png"
 			alt=""
 		>
 	</header>
 	
 	<main>
-		<section>
-			<p>Atenção alunos de cálculo...</p>
-			<article>
-				<h1>
-					O único curso online que ensina </br>
-					derivadas e integrais </br>
-					em apenas 4 semanas partindo do zero </br>
-					mesmo que você não seja muito bom em matemática.
-				</h1>
-			</article>
+		<section class="main-content">
+			<p class="chamadainicial">Atenção alunos de cálculo...</p>
+			<h1 class="headline">
+				O único curso online que ensina </br>
+				derivadas e integrais </br>
+				em apenas 4 semanas partindo do zero </br>
+				mesmo que você não seja muito bom em matemática.
+			</h1>
 
-			<article>
+			<article class="video">
 				<p>
 					<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 				</p>
