Ajustando responsividade no player

--- a/calculus.html
+++ b/calculus.html
@@ -16,24 +16,28 @@
 		>
 	</header>
 	
-	<main>
-		<section class="main-content">
-			<p class="chamadainicial">Atenção alunos de cálculo...</p>
-			<h1 class="headline">
-				O único curso online que ensina </br>
-				derivadas e integrais </br>
-				em apenas 4 semanas partindo do zero </br>
-				mesmo que você não seja muito bom em matemática.
-			</h1>
+	<main class="main-content">
+			
+		<p class="chamadainicial">Atenção alunos de cálculo...</p>
+		
+		<h1 class="headline">
+			O <strong>único</strong> curso online que <strong>ensina</strong> </br>
+			<strong>derivadas</strong> e <strong>integrais</strong> </br>
+			em <strong>apenas 4 semanas</strong> partindo do zero </br>
+			mesmo que você não seja muito bom em matemática.
+		</h1>
 
-			<article class="video">
-				<p>
-					<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
-				</p>
-				<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
-				<h5>Imagem dos meios de pagamento</h5>
-			</article>
-		</section>
+		<article class="video-acao">
+			<div class='video'>
+				<iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+			</div>
+		</article>
+
+		<p>
+			<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
+			<h5>Imagem dos meios de pagamento</h5>
+		</p>
+
 	</main>
 
 	<!-- <section>
