--- a/calculus.html
+++ b/calculus.html
@@ -27,10 +27,8 @@
 			mesmo que você não seja muito bom em matemática.
 		</h1>
 
-		<article class="video-acao">
-			<div class='video'>
-				<iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-			</div>
+		<article class='video'>
+			<iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 		</article>
 
 		<p>
