Criação de aparência do botão de compra e ajustes iniciais de comportamento responsivo para o mesmo

--- a/calculus.html
+++ b/calculus.html
@@ -31,10 +31,13 @@
 			<iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 		</article>
 
-		<p>
-			<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
-			<h5>Imagem dos meios de pagamento</h5>
+		<p class="botaocomprar">
+			<a href="otrapagina.html" class="botao">
+				<span class="empolgado">SIM!</span> Eu quero maiores notas em Cálculo!
+			</a>
 		</p>
+
+		<h5 class="formapagamento">Imagem dos meios de pagamento</h5>
 
 	</main>
 
