Modificando o comportamento de responsividade do botão. Troca de display block por inline-block, precisando mudar de top para bottom a variável manipulada

--- a/calculus.html
+++ b/calculus.html
@@ -31,11 +31,11 @@
 			<iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 		</article>
 		
-		<p class="botaocomprar">
-			<a href="otrapagina.html" class="botao">
+		<a href="otrapagina.html" class="botaocomprar">
+			<p class="botao">
 				<span class="empolgado">SIM!</span> Eu quero maiores notas em Cálculo!
-			</a>
-		</p>
+			</p>
+		</a>
 
 		<h5 class="formapagamento">Imagem dos meios de pagamento</h5>
 
