Início das manipulações do comportamento responsivo da imagem-botao de meios de pagamentos.

--- a/calculus.html
+++ b/calculus.html
@@ -32,12 +32,26 @@
 		</article>
 		
 		<a href="otrapagina.html" class="botaocomprar">
-			<p class="botao">
+			<p class="chamadadobotao">
 				<span class="empolgado">SIM!</span> Eu quero maiores notas em Cálculo!
 			</p>
+			
+			<img class="formasdepagar" 
+				sizes="(max-width: 400px) 100vw, 400px"
+				srcset="
+				./imagens/bandeirasA-50.png 50w,
+				./imagens/bandeiras1-100.png 100w,
+				./imagens/bandeirasB-137.png 137w,
+				./imagens/bandeirasC-200.png 200w,
+				./imagens/bandeiras2-217.png 217w,
+				./imagens/bandeiras3-261.png 261w,
+				./imagens/bandeiras4-307.png 307w,
+				./imagens/bandeiras5-365.png 365w,
+				./imagens/bandeiras6-400.png 400w"
+				src="./imagens/bandeiras6-400.png"
+				alt=""
+			>
 		</a>
-
-		<h5 class="formapagamento">Imagem dos meios de pagamento</h5>
 
 	</main>
 
