--- a/calculus.html
+++ b/calculus.html
@@ -55,53 +55,53 @@
 
 	</main>
 
-	<section>
-		<h2>Confira o que você vai aprender</h2>
+	<section class="estrutura-curso">
+		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
 
 		<article>
-			<h3>Introdução à derivadas</h3>
+			<h3>INTRODUÇÃO À DERIVADAS</h3>
 			<p>
 				Entenda de forma definitiva o que são derivadas, como podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
 		</article>
 		
 		<article>
-			<h3>Regra da Cadeia</h3>
+			<h3>REGRA DA CADEIA</h3>
 			<p>
 				Aprenda esta notável técnica que vai aumentar em até 3x sua capacidade para resolver derivadas.
 			</p>
 		</article>
 
 		<article>
-			<h3>Introdução à Integrais</h3>
+			<h3>INTRODUÇÃO À INTEGRAIS</h3>
 			<p>
 				Entenda o que são integrais, de que forma podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
 		</article>
 
 		<article>
-			<h3>Integral Indefinida</h3>
+			<h3>INTEGRAL INDEFINIDA</h3>
 			<p>
 				Descubra como o método da substituição e da integração por partes podem facilmente ser utilizados para resolver este tipo de integral.
 			</p>
 		</article>
 
 		<article>
-			<h3>Teorema Fundamental do Cálculo</h3>
+			<h3>TEOREMA FUNDAMENTAL DO CÁLCULO</h3>
 			<p>
 				Como usar este poderoso conhecimento para se tornar um profundo conhecedor de derivadas integrais.
 			</p>
 		</article>
 
 		<article>
-			<h3>Integral Definida</h3>
+			<h3>INTEGRAL DEFINIDA</h3>
 			<p>
 				Veja como após seus estudos de integral indefinida você está pronto para evoluir seus conhecimentos aprendendo novas técnicas e práticas para identificar e resolver integrais definidas.
 			</p>
 		</article>
 
 		<article>
-			<h3>Resolução de exercícios</h3>
+			<h3>RESOLUÇÃO DE EXERCÍCIOS</h3>
 			<p>Costuma travar ou ter o famoso "branco" na hora de resolver exercícios? </p>
 			<p>
 				Aprenda na prática com diversos exercícios de derivadas, integrais e suas aplicações. Todos resolvidos passo a passo utilizando várias técnicas que vão turbinar sua agilidade e precisão.
@@ -109,7 +109,7 @@
 		</article>
 
 		<article>
-			<h3>E muito mais...</h3>
+			<h3>E MUITO MAIS...</h3>
 			<p>
 				E não para por aí. Diversos outros conteúdos que vão fazer você se tornar um especialista na resolução de derivadas e integrais.
 			</p>
