Adicionando classe do componente conteudo-aula no componente estrutura-curso

--- a/calculus.html
+++ b/calculus.html
@@ -58,49 +58,49 @@
 	<section class="estrutura-curso">
 		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
 
-		<article>
+		<article class="conteudo-aula">
 			<h3>INTRODUÇÃO À DERIVADAS</h3>
 			<p>
 				Entenda de forma definitiva o que são derivadas, como podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
 		</article>
 		
-		<article>
+		<article class="conteudo-aula">
 			<h3>REGRA DA CADEIA</h3>
 			<p>
 				Aprenda esta notável técnica que vai aumentar em até 3x sua capacidade para resolver derivadas.
 			</p>
 		</article>
 
-		<article>
+		<article class="conteudo-aula">
 			<h3>INTRODUÇÃO À INTEGRAIS</h3>
 			<p>
 				Entenda o que são integrais, de que forma podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
 		</article>
 
-		<article>
+		<article class="conteudo-aula">
 			<h3>INTEGRAL INDEFINIDA</h3>
 			<p>
 				Descubra como o método da substituição e da integração por partes podem facilmente ser utilizados para resolver este tipo de integral.
 			</p>
 		</article>
 
-		<article>
+		<article class="conteudo-aula">
 			<h3>TEOREMA FUNDAMENTAL DO CÁLCULO</h3>
 			<p>
 				Como usar este poderoso conhecimento para se tornar um profundo conhecedor de derivadas integrais.
 			</p>
-		</article>
+		</article class="conteudo-aula">
 
-		<article>
+		<article class="conteudo-aula">
 			<h3>INTEGRAL DEFINIDA</h3>
 			<p>
 				Veja como após seus estudos de integral indefinida você está pronto para evoluir seus conhecimentos aprendendo novas técnicas e práticas para identificar e resolver integrais definidas.
 			</p>
 		</article>
 
-		<article>
+		<article class="conteudo-aula">
 			<h3>RESOLUÇÃO DE EXERCÍCIOS</h3>
 			<p>Costuma travar ou ter o famoso "branco" na hora de resolver exercícios? </p>
 			<p>
@@ -108,7 +108,7 @@
 			</p>
 		</article>
 
-		<article>
+		<article class="conteudo-aula">
 			<h3>E MUITO MAIS...</h3>
 			<p>
 				E não para por aí. Diversos outros conteúdos que vão fazer você se tornar um especialista na resolução de derivadas e integrais.
