--- a/calculus.html
+++ b/calculus.html
@@ -59,58 +59,59 @@
 		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
 
 		<article class="conteudo-aula">
-			<h3>INTRODUÇÃO À DERIVADAS</h3>
-			<p>
+			<h3 class="tituloaula">INTRODUÇÃO À DERIVADAS</h3>
+			<p class="descricaoaula">
 				Entenda de forma definitiva o que são derivadas, como podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
 		</article>
 		
 		<article class="conteudo-aula">
-			<h3>REGRA DA CADEIA</h3>
-			<p>
+			<h3 class="tituloaula">REGRA DA CADEIA</h3>
+			<p class="descricaoaula">
 				Aprenda esta notável técnica que vai aumentar em até 3x sua capacidade para resolver derivadas.
 			</p>
 		</article>
 
 		<article class="conteudo-aula">
-			<h3>INTRODUÇÃO À INTEGRAIS</h3>
-			<p>
+			<h3 class="tituloaula">INTRODUÇÃO À INTEGRAIS</h3>
+			<p class="descricaoaula">
 				Entenda o que são integrais, de que forma podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
 		</article>
 
 		<article class="conteudo-aula">
-			<h3>INTEGRAL INDEFINIDA</h3>
-			<p>
+			<h3 class="tituloaula">INTEGRAL INDEFINIDA</h3>
+			<p class="descricaoaula">
 				Descubra como o método da substituição e da integração por partes podem facilmente ser utilizados para resolver este tipo de integral.
 			</p>
 		</article>
 
 		<article class="conteudo-aula">
-			<h3>TEOREMA FUNDAMENTAL DO CÁLCULO</h3>
-			<p>
+			<h3 class="tituloaula">TEOREMA FUNDAMENTAL DO CÁLCULO</h3>
+			<p class="descricaoaula">
 				Como usar este poderoso conhecimento para se tornar um profundo conhecedor de derivadas integrais.
 			</p>
 		</article class="conteudo-aula">
 
 		<article class="conteudo-aula">
-			<h3>INTEGRAL DEFINIDA</h3>
-			<p>
+			<h3 class="tituloaula">INTEGRAL DEFINIDA</h3>
+			<p class="descricaoaula">
 				Veja como após seus estudos de integral indefinida você está pronto para evoluir seus conhecimentos aprendendo novas técnicas e práticas para identificar e resolver integrais definidas.
 			</p>
 		</article>
 
 		<article class="conteudo-aula">
-			<h3>RESOLUÇÃO DE EXERCÍCIOS</h3>
-			<p>Costuma travar ou ter o famoso "branco" na hora de resolver exercícios? </p>
-			<p>
+			<h3 class="tituloaula">RESOLUÇÃO DE EXERCÍCIOS</h3>
+			<p class="descricaoaula">Costuma travar ou ter o famoso "branco" na hora de resolver exercícios? </p>
+			
+			<p class="descricaoaula">
 				Aprenda na prática com diversos exercícios de derivadas, integrais e suas aplicações. Todos resolvidos passo a passo utilizando várias técnicas que vão turbinar sua agilidade e precisão.
 			</p>
 		</article>
 
 		<article class="conteudo-aula">
-			<h3>E MUITO MAIS...</h3>
-			<p>
+			<h3 class="tituloaula">E MUITO MAIS...</h3>
+			<p class="descricaoaula">
 				E não para por aí. Diversos outros conteúdos que vão fazer você se tornar um especialista na resolução de derivadas e integrais.
 			</p>
 		</article>
