Inclusão de imagem svg no componente conteudo-aula

--- a/calculus.html
+++ b/calculus.html
@@ -60,6 +60,11 @@
 
 		<article class="conteudo-aula">
 			<h3 class="tituloaula">INTRODUÇÃO À DERIVADAS</h3>
+
+			<img class="aulasvg" 
+				src="./imagens/conteudoaula.svg" 
+				alt=""
+			>
 			<p class="descricaoaula">
 				Entenda de forma definitiva o que são derivadas, como podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
@@ -103,7 +108,7 @@
 		<article class="conteudo-aula">
 			<h3 class="tituloaula">RESOLUÇÃO DE EXERCÍCIOS</h3>
 			<p class="descricaoaula">Costuma travar ou ter o famoso "branco" na hora de resolver exercícios? </p>
-			
+
 			<p class="descricaoaula">
 				Aprenda na prática com diversos exercícios de derivadas, integrais e suas aplicações. Todos resolvidos passo a passo utilizando várias técnicas que vão turbinar sua agilidade e precisão.
 			</p>
