--- a/calculus.html
+++ b/calculus.html
@@ -59,12 +59,12 @@
 		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
 
 		<article class="conteudo-aula">
-			<h3 class="tituloaula">INTRODUÇÃO À DERIVADAS</h3>
-
-			<img class="aulasvg" 
+			<h3 class="tituloaula"> <img class="aulasvg" 
 				src="./imagens/conteudoaula.svg" 
 				alt=""
-			>
+			> INTRODUÇÃO À DERIVADAS</h3>
+
+			
 			<p class="descricaoaula">
 				Entenda de forma definitiva o que são derivadas, como podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
