Mudando de svg para png, pois svg não consegui fazer svg renderizar bem no firefox

--- a/calculus.html
+++ b/calculus.html
@@ -59,18 +59,23 @@
 		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
 
 		<article class="conteudo-aula">
-			<h3 class="tituloaula"> <img class="aulasvg" 
-				src="./imagens/conteudoaula.svg" 
-				alt=""
-			> INTRODUÇÃO À DERIVADAS</h3>
-
 			
+			<img class="aulasvg" 
+				src="./imagens/b2.png" 
+				alt=""
+			>
+			<h3 class="tituloaula">INTRODUÇÃO À DERIVADAS</h3>
+
 			<p class="descricaoaula">
 				Entenda de forma definitiva o que são derivadas, como podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
 		</article>
 		
 		<article class="conteudo-aula">
+			<img class="aulasvg" 
+				src="./imagens/b2.png" 
+				alt=""
+			>
 			<h3 class="tituloaula">REGRA DA CADEIA</h3>
 			<p class="descricaoaula">
 				Aprenda esta notável técnica que vai aumentar em até 3x sua capacidade para resolver derivadas.
@@ -78,6 +83,10 @@
 		</article>
 
 		<article class="conteudo-aula">
+			<img class="aulasvg" 
+				src="./imagens/b2.png" 
+				alt=""
+			>
 			<h3 class="tituloaula">INTRODUÇÃO À INTEGRAIS</h3>
 			<p class="descricaoaula">
 				Entenda o que são integrais, de que forma podem ser utilizadas e as regras que são aplicadas para sua resolução.
@@ -85,6 +94,10 @@
 		</article>
 
 		<article class="conteudo-aula">
+			<img class="aulasvg" 
+				src="./imagens/b2.png" 
+				alt=""
+			>
 			<h3 class="tituloaula">INTEGRAL INDEFINIDA</h3>
 			<p class="descricaoaula">
 				Descubra como o método da substituição e da integração por partes podem facilmente ser utilizados para resolver este tipo de integral.
@@ -92,6 +105,10 @@
 		</article>
 
 		<article class="conteudo-aula">
+			<img class="aulasvg" 
+				src="./imagens/b2.png" 
+				alt=""
+			>
 			<h3 class="tituloaula">TEOREMA FUNDAMENTAL DO CÁLCULO</h3>
 			<p class="descricaoaula">
 				Como usar este poderoso conhecimento para se tornar um profundo conhecedor de derivadas integrais.
@@ -99,6 +116,10 @@
 		</article class="conteudo-aula">
 
 		<article class="conteudo-aula">
+			<img class="aulasvg" 
+				src="./imagens/b2.png" 
+				alt=""
+			>
 			<h3 class="tituloaula">INTEGRAL DEFINIDA</h3>
 			<p class="descricaoaula">
 				Veja como após seus estudos de integral indefinida você está pronto para evoluir seus conhecimentos aprendendo novas técnicas e práticas para identificar e resolver integrais definidas.
@@ -106,6 +127,10 @@
 		</article>
 
 		<article class="conteudo-aula">
+			<img class="aulasvg" 
+				src="./imagens/b2.png" 
+				alt=""
+			>
 			<h3 class="tituloaula">RESOLUÇÃO DE EXERCÍCIOS</h3>
 			<p class="descricaoaula">Costuma travar ou ter o famoso "branco" na hora de resolver exercícios? </p>
 
@@ -115,6 +140,10 @@
 		</article>
 
 		<article class="conteudo-aula">
+			<img class="aulasvg" 
+				src="./imagens/b2.png" 
+				alt=""
+			>
 			<h3 class="tituloaula">E MUITO MAIS...</h3>
 			<p class="descricaoaula">
 				E não para por aí. Diversos outros conteúdos que vão fazer você se tornar um especialista na resolução de derivadas e integrais.
