Mudando de fato para .png a imagem da estrutura do curso e limpando o repositório.

--- a/calculus.html
+++ b/calculus.html
@@ -61,7 +61,7 @@
 		<article class="conteudo-aula">
 			
 			<img class="aulasvg" 
-				src="./imagens/b2.png" 
+				src="./imagens/books.png" 
 				alt=""
 			>
 			<h3 class="tituloaula">INTRODUÇÃO À DERIVADAS</h3>
@@ -73,7 +73,7 @@
 		
 		<article class="conteudo-aula">
 			<img class="aulasvg" 
-				src="./imagens/b2.png" 
+				src="./imagens/books.png" 
 				alt=""
 			>
 			<h3 class="tituloaula">REGRA DA CADEIA</h3>
@@ -84,7 +84,7 @@
 
 		<article class="conteudo-aula">
 			<img class="aulasvg" 
-				src="./imagens/b2.png" 
+				src="./imagens/books.png" 
 				alt=""
 			>
 			<h3 class="tituloaula">INTRODUÇÃO À INTEGRAIS</h3>
@@ -95,7 +95,7 @@
 
 		<article class="conteudo-aula">
 			<img class="aulasvg" 
-				src="./imagens/b2.png" 
+				src="./imagens/books.png" 
 				alt=""
 			>
 			<h3 class="tituloaula">INTEGRAL INDEFINIDA</h3>
@@ -106,7 +106,7 @@
 
 		<article class="conteudo-aula">
 			<img class="aulasvg" 
-				src="./imagens/b2.png" 
+				src="./imagens/books.png" 
 				alt=""
 			>
 			<h3 class="tituloaula">TEOREMA FUNDAMENTAL DO CÁLCULO</h3>
@@ -117,7 +117,7 @@
 
 		<article class="conteudo-aula">
 			<img class="aulasvg" 
-				src="./imagens/b2.png" 
+				src="./imagens/books.png" 
 				alt=""
 			>
 			<h3 class="tituloaula">INTEGRAL DEFINIDA</h3>
@@ -128,7 +128,7 @@
 
 		<article class="conteudo-aula">
 			<img class="aulasvg" 
-				src="./imagens/b2.png" 
+				src="./imagens/books.png" 
 				alt=""
 			>
 			<h3 class="tituloaula">RESOLUÇÃO DE EXERCÍCIOS</h3>
@@ -141,7 +141,7 @@
 
 		<article class="conteudo-aula">
 			<img class="aulasvg" 
-				src="./imagens/b2.png" 
+				src="./imagens/books.png" 
 				alt=""
 			>
 			<h3 class="tituloaula">E MUITO MAIS...</h3>
@@ -151,7 +151,7 @@
 		</article>
 	</section>
 
-	<!-- <section>
+	<section>
 		<h2>Mais de X Reais em Bônus (Tudo Grátis!)</h2>
 		<article>
 			<p>lapis cruzando regua</p>
@@ -223,7 +223,7 @@
 				<li><a href="otrapagina.html">Membros</li>
 			</ul>
 		</nav>
-	</footer> -->
+	</footer>
 
 </body>
 </html>
