--- a/calculus.html
+++ b/calculus.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header>		
+	<header class="logo">		
 		<img
 			sizes="(max-width: 164px) 100vw, 164px"
 			srcset="./imagens/logotipo-calculus_vz4sdt_c_scale,w_164.png 184w"
@@ -54,6 +54,10 @@
 		</a>
 
 	</main>
+
+	<section>
+		<h2>Depoimentos</h2>
+	</section>
 
 	<section class="estrutura-curso">
 		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
@@ -150,6 +154,7 @@
 			</p>
 		</article>
 	</section>
+
 <!-- 
 	<section>
 		<h2>Mais de X Reais em Bônus (Tudo Grátis!)</h2>
