retirando (comentando) seções desnecessárias no momento, mudando comportamento da logo para centralizar em resoluções pequenas e colocando seção depoimentos antes da seção de estrutura do curso

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header>		
+	<header class="logo">		
 		<img
 			sizes="(max-width: 164px) 100vw, 164px"
 			srcset="./imagens/logotipo-calculus_vz4sdt_c_scale,w_164.png 184w"
@@ -54,6 +54,10 @@
 		</a>
 
 	</main>
+
+	<section>
+		<h2>Depoimentos</h2>
+	</section>
 
 	<section class="estrutura-curso">
 		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
@@ -151,6 +155,7 @@
 		</article>
 	</section>
 
+<!-- 
 	<section>
 		<h2>Mais de X Reais em Bônus (Tudo Grátis!)</h2>
 		<article>
@@ -224,6 +229,6 @@
 			</ul>
 		</nav>
 	</footer>
-
+ -->
 </body>
 </html>
