inclusão de novo componente titulo-aula para manipular a imagem e o título da estrutura.

--- a/index.html
+++ b/index.html
@@ -55,20 +55,22 @@
 
 	</main>
 
-	<section>
+	<!-- <section>
 		<h2>Depoimentos</h2>
-	</section>
+	</section> -->
 
 	<section class="estrutura-curso">
 		<h2 class="chamadacurso">Confira o que <strong>você vai aprender</strong></h2>
 
 		<article class="conteudo-aula">
 			
-			<img class="aulasvg" 
-				src="./imagens/books.png" 
-				alt=""
-			>
-			<h3 class="tituloaula">INTRODUÇÃO À DERIVADAS</h3>
+			<div class="titulo-aula">
+				<img class="imagemestrutura" 
+					src="./imagens/books.png" 
+					alt=""
+				>
+				<h3 class="titulo">INTRODUÇÃO À DERIVADAS</h3>
+			</div>
 
 			<p class="descricaoaula">
 				Entenda de forma definitiva o que são derivadas, como podem ser utilizadas e as regras que são aplicadas para sua resolução.
