Modificando nomes de classes da estrutura do curso e implementando comportamento nas resoluções iniciais.

--- a/index.html
+++ b/index.html
@@ -78,66 +78,78 @@
 		</article>
 		
 		<article class="conteudo-aula">
-			<img class="aulasvg" 
-				src="./imagens/books.png" 
-				alt=""
-			>
-			<h3 class="tituloaula">REGRA DA CADEIA</h3>
+			<div class="titulo-aula">
+				<img class="imagemestrutura" 
+					src="./imagens/books.png" 
+					alt=""
+				>
+				<h3 class="titulo">REGRA DA CADEIA</h3>
+			</div>
 			<p class="descricaoaula">
 				Aprenda esta notável técnica que vai aumentar em até 3x sua capacidade para resolver derivadas.
 			</p>
 		</article>
 
 		<article class="conteudo-aula">
-			<img class="aulasvg" 
-				src="./imagens/books.png" 
-				alt=""
-			>
-			<h3 class="tituloaula">INTRODUÇÃO À INTEGRAIS</h3>
+			<div class="titulo-aula">
+				<img class="imagemestrutura" 
+					src="./imagens/books.png" 
+					alt=""
+				>
+				<h3 class="titulo">INTRODUÇÃO À INTEGRAIS</h3>
+			</div>
 			<p class="descricaoaula">
 				Entenda o que são integrais, de que forma podem ser utilizadas e as regras que são aplicadas para sua resolução.
 			</p>
 		</article>
 
 		<article class="conteudo-aula">
-			<img class="aulasvg" 
-				src="./imagens/books.png" 
-				alt=""
-			>
-			<h3 class="tituloaula">INTEGRAL INDEFINIDA</h3>
+			<div class="titulo-aula">
+				<img class="imagemestrutura" 
+					src="./imagens/books.png" 
+					alt=""
+				>
+				<h3 class="titulo">INTEGRAL INDEFINIDA</h3>
+			</div>
 			<p class="descricaoaula">
 				Descubra como o método da substituição e da integração por partes podem facilmente ser utilizados para resolver este tipo de integral.
 			</p>
 		</article>
 
 		<article class="conteudo-aula">
-			<img class="aulasvg" 
-				src="./imagens/books.png" 
-				alt=""
-			>
-			<h3 class="tituloaula">TEOREMA FUNDAMENTAL DO CÁLCULO</h3>
+			<div class="titulo-aula">
+				<img class="imagemestrutura" 
+					src="./imagens/books.png" 
+					alt=""
+				>
+				<h3 class="titulo">TEOREMA FUNDAMENTAL DO CÁLCULO</h3>
+			</div>
 			<p class="descricaoaula">
 				Como usar este poderoso conhecimento para se tornar um profundo conhecedor de derivadas integrais.
 			</p>
 		</article class="conteudo-aula">
 
 		<article class="conteudo-aula">
-			<img class="aulasvg" 
-				src="./imagens/books.png" 
-				alt=""
-			>
-			<h3 class="tituloaula">INTEGRAL DEFINIDA</h3>
+			<div class="titulo-aula">
+				<img class="imagemestrutura" 
+					src="./imagens/books.png" 
+					alt=""
+				>
+				<h3 class="titulo">INTEGRAL DEFINIDA</h3>
+			</div>
 			<p class="descricaoaula">
 				Veja como após seus estudos de integral indefinida você está pronto para evoluir seus conhecimentos aprendendo novas técnicas e práticas para identificar e resolver integrais definidas.
 			</p>
 		</article>
 
 		<article class="conteudo-aula">
-			<img class="aulasvg" 
-				src="./imagens/books.png" 
-				alt=""
-			>
-			<h3 class="tituloaula">RESOLUÇÃO DE EXERCÍCIOS</h3>
+			<div class="titulo-aula">
+				<img class="imagemestrutura" 
+					src="./imagens/books.png" 
+					alt=""
+				>
+				<h3 class="titulo">RESOLUÇÃO DE EXERCÍCIOS</h3>
+			</div>
 			<p class="descricaoaula">Costuma travar ou ter o famoso "branco" na hora de resolver exercícios? </p>
 
 			<p class="descricaoaula">
@@ -146,11 +158,13 @@
 		</article>
 
 		<article class="conteudo-aula">
-			<img class="aulasvg" 
-				src="./imagens/books.png" 
-				alt=""
-			>
-			<h3 class="tituloaula">E MUITO MAIS...</h3>
+			<div class="titulo-aula">
+				<img class="imagemestrutura" 
+					src="./imagens/books.png" 
+					alt=""
+				>
+				<h3 class="titulo">E MUITO MAIS...</h3>
+			</div>
 			<p class="descricaoaula">
 				E não para por aí. Diversos outros conteúdos que vão fazer você se tornar um especialista na resolução de derivadas e integrais.
 			</p>
