Inclusão de novas descrições para os módulos do curso

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 			</div>
 
 			<p class="descricaoaula">
-				Entenda de forma definitiva o que são derivadas, como podem ser utilizadas e as regras que são aplicadas para sua resolução.
+				O que a aceleração de um carro tem a ver com derivadas? Entenda de forma definitiva o que são derivadas, como podem ser utilizadas 
+				e as regras que são aplicadas para sua resolução.
 			</p>
 		</article>
 		
@@ -86,7 +87,8 @@
 				<h3 class="titulo">REGRA DA CADEIA</h3>
 			</div>
 			<p class="descricaoaula">
-				Aprenda esta notável técnica que vai aumentar em até 3x sua capacidade para resolver derivadas.
+				Aprenda esta notável técnica que vai aumentar em até 3x sua capacidade para resolver derivadas de forma ágil, prática e segura.
+
 			</p>
 		</article>
 
@@ -112,7 +114,8 @@
 				<h3 class="titulo">INTEGRAL INDEFINIDA</h3>
 			</div>
 			<p class="descricaoaula">
-				Descubra como o método da substituição e da integração por partes podem facilmente ser utilizados para resolver este tipo de integral.
+				Falta de agilidade para iniciar ou até mesmo terminar a resolução de uma integral? Descubra como o método da substituição e da 
+				integração por partes podem facilmente serem utilizados para resolver este tipo de integral.
 			</p>
 		</article>
 
