Inclusão de modelo provisório de vídeo com autoplay e barra de controles desabilitada

--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
 			mesmo que você não seja muito bom em matemática.
 		</h1>
 
+		<!--
 		<article class='video'>
 			<iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		</article>
+		-->
+		
+		<article class='video'>
+			<iframe src=https://www.youtube.com/embed/5M6ud4sL6GA?autoplay=1&modestbranding=1&nologo=1&rel=0&showinfo=0&theme=light&wmode=opaque&controls=0&iv_load_policy=3&nologo=1></iframe>
 		</article>
 		
 		<a href="otrapagina.html" class="botaocomprar">
