Manipulações da imagem de garantia. Trocada por uma de qualidade melhor e decisão final a respeito de como abordar responsividade. Em vez de várias imagens no srcset, apenas uma, manipulando o width.

--- a/index.html
+++ b/index.html
@@ -26,15 +26,9 @@
 			em <strong>apenas 4 semanas</strong> partindo do zero </br>
 			mesmo que você não seja muito bom em matemática.
 		</h1>
-
-		<!--
-		<article class='video'>
-			<iframe src='https://player.vimeo.com/video/154727398' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-		</article>
-		-->
 		
 		<article class='video'>
-			<iframe src=https://www.youtube.com/embed/5M6ud4sL6GA?autoplay=1&modestbranding=1&nologo=1&rel=0&showinfo=0&theme=light&wmode=opaque&controls=0&iv_load_policy=3&nologo=1></iframe>
+			<iframe src=https://www.youtube.com/embed/5M6ud4sL6GA?autoplay=0&modestbranding=1&nologo=1&rel=0&showinfo=0&theme=light&wmode=opaque&controls=0&iv_load_policy=3&nologo=1></iframe>
 		</article>
 		
 		<a href="otrapagina.html" class="botaocomprar">
@@ -180,6 +174,40 @@
 		</article>
 	</section>
 
+	<section class="garantia-30dias">
+		
+			<img class="imagemgarantia" 
+				src="./imagens/30dias.png"
+				alt="" 
+			>
+
+			<!-- <article class="">
+				<h2>Garantia de 30 dias. Risco Zero. 100% de Satisfação.</h2>
+				
+				<p>
+					Eu sei que você está passando por uma fase muito importante em sua vida, um curso universitário...
+				</p>
+
+				<p>
+					Então quero que você tenha total e completa confiança ao adquirir o curso CälculuS!
+				</p>
+
+				<p>
+					Assista as aulas, pratique os exercícios e estude o conteúdo por pelo menos 1 hora por dia. Tudo isso por até 30 dias completos!
+				</p>
+
+				<p>
+					Durante este período, se você não notar CLARAMENTE uma melhora em seus conhecimentos de derivadas e/ou integrais... Ou até mesmo se você não gostar do som da minha voz... 	
+				</p>
+
+				<p>
+					Basta você mandar um e-mail para faleconosco.calculus@gmail.com pedindo seu reembolso e eu devolvo TODO o seu dinheiro... Sem perguntas, sem enrolação, sem encheção de saco...
+				</p>
+
+				<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
+				<h5>Imagem dos meios de pagamento</h5>
+			</article>
+	</section> 
 
 	<section>
 		<h2>Mais de X Reais em Bônus (Tudo Grátis!)</h2>
@@ -210,39 +238,7 @@
 		</article>
 	</section>
 
-	<section>
-		<div>
-			<article>
-				<h2>Imagem Garantia</h2>
-			</article>
-			<article>
-				<h2>Garantia de 30 dias. Risco Zero. 100% de Satisfação.</h2>
-				
-				<p>
-					Eu sei que você está passando por uma fase muito importante em sua vida, um curso universitário...
-				</p>
-
-				<p>
-					Então quero que você tenha total e completa confiança ao adquirir o curso CälculuS!
-				</p>
-
-				<p>
-					Assista as aulas, pratique os exercícios e estude o conteúdo por pelo menos 1 hora por dia. Tudo isso por até 30 dias completos!
-				</p>
-
-				<p>
-					Durante este período, se você não notar CLARAMENTE uma melhora em seus conhecimentos de derivadas e/ou integrais... Ou até mesmo se você não gostar do som da minha voz... 	
-				</p>
-
-				<p>
-					Basta você mandar um e-mail para faleconosco.calculus@gmail.com pedindo seu reembolso e eu devolvo TODO o seu dinheiro... Sem perguntas, sem enrolação, sem encheção de saco...
-				</p>
-
-				<a href="otrapagina.html">SIM! Eu quero maiores notas em Cálculo!</a>
-				<h5>Imagem dos meios de pagamento</h5>
-			</article>
-		</div>
-	</section> 
+	
 
 	<footer>
 		<nav>
@@ -253,7 +249,7 @@
 				<li><a href="otrapagina.html">Membros</li>
 			</ul>
 		</nav>
-	</footer>
+	</footer> -->
 
 </body>
 </html>
