Manipulações para chegar ao melhor conjunto para a responsividade da seção de garantia.

--- a/index.html
+++ b/index.html
@@ -181,8 +181,10 @@
 				alt="" 
 			>
 
-			<!-- <article class="">
-				<h2>Garantia de 30 dias. Risco Zero. 100% de Satisfação.</h2>
+			<article class="textogarantia">
+				<h2 class="titulogarantia">
+					Garantia de 30 dias. Risco Zero. <br><strong>100% de Satisfação.</strong></br>
+				</h2>
 				
 				<p>
 					Eu sei que você está passando por uma fase muito importante em sua vida, um curso universitário...
@@ -209,7 +211,7 @@
 			</article>
 	</section> 
 
-	<section>
+	<!-- <section>
 		<h2>Mais de X Reais em Bônus (Tudo Grátis!)</h2>
 		<article>
 			<p>lapis cruzando regua</p>
