Finalmente comportamento da seção de garantia concluído, com o funcionamento desejado. p.s.: as mensagens de commits estão horríveis.

--- a/index.html
+++ b/index.html
@@ -181,9 +181,11 @@
 				alt="" 
 			>
 
-			<article class="textogarantia">
+			<article class="texto-garantia">
 				<h2 class="titulogarantia">
-					Garantia de 30 dias. Risco Zero. <br><strong>100% de Satisfação.</strong></br>
+					<!-- Garantia de 30 dias. <br>Risco Zero.</br><strong>100% de Satisfação.</strong> -->
+					Garantia de 30 dias. <span class="riscozero">Risco Zero.</span>
+					<span class="frasesatisfacao"><strong>100% de Satisfação.</strong></span>
 				</h2>
 				
 				<p>
