Commit de alterações na parte de bônus

--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
 			</a>
 	</section> 
 
-	<!-- <section>
+	<section class="bonus-total">
 		<h2>Mais de X Reais em Bônus (Tudo Grátis!)</h2>
-		<article>
+		<article class="primeirobonus">
 			<p>lapis cruzando regua</p>
 			<h3>Aplicações de Derivadas</h3>
 			<p>
@@ -241,7 +241,7 @@
 			</p>
 		</article>
 
-		<article>
+		<article class="segundobonus">
 			<p>https://www.iconfinder.com/icons/307157/design_development_drawing_graphic_prototyping_ruler_tools_icon esquadro</p>
 			<h3>Aplicações de Integrais</h3>
 			<p>
@@ -249,7 +249,7 @@
 			</p>
 		</article>
 
-		<article>
+		<article class="terceirobonus">
 			<p>calendar flat icon </p>
 			<h3>6 meses de acesso grátis</h3>
 			<p>
@@ -260,9 +260,7 @@
 		</article>
 	</section>
 
-	
-
-	<footer>
+	<!-- <footer>
 		<nav>
 			<ul>
 				<li>Copyright 2016 - CälculuS - Todos Direitos Reservados</li>
