Colocação dos bônus em três colunas quando atigir o tamanho de 45em em diante

--- a/temp.html
+++ b/temp.html
@@ -16,12 +16,6 @@
 		>
 	</header>
 	
-	<!--
-		Mudar o tamanho do player para maior
-		Alinhar fontes
-
-	 -->
-
 	<main class="main-content">
 			
 		<p class="chamadainicial">Atenção alunos de cálculo...</p>
@@ -34,12 +28,8 @@
 		</h1>
 		
 		<article class='video'>
-			<iframe src=https://www.youtube.com/embed/3ZPCZEB-RKw?autoplay=0&modestbranding=1&nologo=1&rel=0&showinfo=0&theme=light&wmode=opaque&controls=0&iv_load_policy=3&nologo=1 frameborder="0"></iframe>
-
-			<!-- <iframe src="https://www.youtube.com/embed/1MkNMG3WabU?autoplay=1&amp;modestbranding=1&amp;nologo=1&amp;rel=0&amp;showinfo=0&amp;theme=light&amp;wmode=opaque&amp;controls=0&amp;iv_load_policy=3&amp;nologo=1" width="300" height="300" allowfullscreen="" frameborder="0"></iframe> -->
+			<iframe src=https://www.youtube.com/embed/3ZPCZEB-RKw?autoplay=0&modestbranding=1&nologo=1&rel=0&showinfo=0&theme=light&wmode=opaque&controls=0&iv_load_policy=3&nologo=1></iframe>
 		</article>
-
-		
 		
 		<a href="otrapagina.html" class="botaocomprar">
 			<p class="chamadadobotao">
@@ -66,26 +56,7 @@
 	</main>
 
 	<!-- <section>
-		<h2>
-			Veja o que o mercado diz sobre os cursos de ciências exatas
-		</h2>
-		<article>
-			<img src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/jornaldaglobo-exatas.png">
-
-			<img src="/home/daniel/Documentos/Projetos/CalculusGH/calculus/depoimentos/Imagens_depoimentos/1demanda-reprimida/oglobo-engenheiros-01.png">
-		</article>
-
-		<article>
-			<h2>
-				O que o alunos e os professores falam sobre a disciplina de Cálculo?
-			</h2>
-		</article>
-
-		<article>
-			<h2>
-				Como as pessoas que estudaram Cálculo estão profissionalmente?
-			</h2>
-		</article>
+		<h2>Depoimentos</h2>
 	</section> -->
 
 	<section class="estrutura-curso">
@@ -261,26 +232,26 @@
 	</section> 
 
 	<section class="bonus-total">
-		<h2 class="chamadabonus">Mais de X Reais em Bônus (Tudo Grátis!)</h2>
-		<article class="bonus">
-			<h3>Aplicações de Derivadas</h3>
+		<h2>Mais de X Reais em Bônus (Tudo Grátis!)</h2>
+		<article class="primeirobonus">
 			<p>lapis cruzando regua</p>
+			<h3>Aplicações de Derivadas</h3>
 			<p>
 				Tenha acesso a diversos exemplos que te mostram passo a passo os mais diversos usos das derivadas para resolução de problemas comuns em nossa sociedade. Entenda de uma vez por todas a importância do Cálculo em nossas vidas.
 			</p>
 		</article>
 
-		<article class="bonus">
-			<!-- <p>https://www.iconfinder.com/icons/307157/design_development_drawing_graphic_prototyping_ruler_tools_icon esquadro</p> -->
+		<article class="segundobonus">
+			<p>https://www.iconfinder.com/icons/307157/design_development_drawing_graphic_prototyping_ruler_tools_icon esquadro</p>
 			<h3>Aplicações de Integrais</h3>
 			<p>
 				Entenda de que forma a teoria de integral pode fazer total diferença na resolução de problemas. Descubra como usar este incrível a seu favor.
 			</p>
 		</article>
 
-		<article class="bonus">
-			<h3>6 meses de acesso grátis</h3>
+		<article class="terceirobonus">
 			<p>calendar flat icon </p>
+			<h3>6 meses de acesso grátis</h3>
 			<p>
 				Ofereço à você mais 6 meses de acesso gratuito a todo conteúdo do curso. Tenha, então, 12 meses de acesso completo ao curso. Todo este tempo te dá muito mais tranquilidade em seus estudos e isto absolutamente vai aumentar e muito seus resultados.
 			</p>
