--- a/index.html
+++ b/index.html
@@ -262,26 +262,26 @@
 
 	<section class="bonus-total">
 		<h2 class="chamadabonus">Mais de X Reais em Bônus (Tudo Grátis!)</h2>
-		<article class="bonus">
-			<h3>Aplicações de Derivadas</h3>
-			<p>lapis cruzando regua</p>
-			<p>
+		<article class="bonus-parcial">
+			<h3 class="titulobonus">Aplicações de Derivadas</h3>
+			<!-- <p>lapis cruzando regua</p> -->
+			<p class="descricaobonus">
 				Tenha acesso a diversos exemplos que te mostram passo a passo os mais diversos usos das derivadas para resolução de problemas comuns em nossa sociedade. Entenda de uma vez por todas a importância do Cálculo em nossas vidas.
 			</p>
 		</article>
 
-		<article class="bonus">
+		<article class="bonus-parcial">
 			<!-- <p>https://www.iconfinder.com/icons/307157/design_development_drawing_graphic_prototyping_ruler_tools_icon esquadro</p> -->
-			<h3>Aplicações de Integrais</h3>
-			<p>
+			<h3 class="titulobonus">Aplicações de Integrais</h3>
+			<p class="descricaobonus">
 				Entenda de que forma a teoria de integral pode fazer total diferença na resolução de problemas. Descubra como usar este incrível a seu favor.
 			</p>
 		</article>
 
-		<article class="bonus">
-			<h3>6 meses de acesso grátis</h3>
-			<p>calendar flat icon </p>
-			<p>
+		<article class="bonus-parcial">
+			<h3 class="titulobonus">6 meses de acesso grátis</h3>
+			<!-- <p>calendar flat icon </p> -->
+			<p class="descricaobonus">
 				Ofereço à você mais 6 meses de acesso gratuito a todo conteúdo do curso. Tenha, então, 12 meses de acesso completo ao curso. Todo este tempo te dá muito mais tranquilidade em seus estudos e isto absolutamente vai aumentar e muito seus resultados.
 			</p>
 			<p>Aproveite este incrível bônus!</p>
