Implementação do comportamento responsivo dos bônus e inclusão dos ícones

--- a/index.html
+++ b/index.html
@@ -263,30 +263,39 @@
 	<section class="bonus-total">
 		<h2 class="chamadabonus">Mais de X Reais em Bônus (Tudo Grátis!)</h2>
 		<article class="bonus-parcial">
-			<h3 class="titulobonus">Aplicações de Derivadas</h3>
-			<!-- <p>lapis cruzando regua</p> -->
+			<div class="titulo-bonus">
+				<img src="./imagens/integral.png" class="imagembonus">
+				<h3 class="titulobonus">Aplicações de Derivadas</h3>
+			</div>
+			
 			<p class="descricaobonus">
 				Tenha acesso a diversos exemplos que te mostram passo a passo os mais diversos usos das derivadas para resolução de problemas comuns em nossa sociedade. Entenda de uma vez por todas a importância do Cálculo em nossas vidas.
 			</p>
 		</article>
 
 		<article class="bonus-parcial">
-			<!-- <p>https://www.iconfinder.com/icons/307157/design_development_drawing_graphic_prototyping_ruler_tools_icon esquadro</p> -->
-			<h3 class="titulobonus">Aplicações de Integrais</h3>
+			<div class="titulo-bonus">
+				<img src="./imagens/geometry.png" class="imagembonus">
+				<h3 class="titulobonus">Aplicações de Integrais</h3>
+			</div>
 			<p class="descricaobonus">
 				Entenda de que forma a teoria de integral pode fazer total diferença na resolução de problemas. Descubra como usar este incrível a seu favor.
 			</p>
 		</article>
 
 		<article class="bonus-parcial">
-			<h3 class="titulobonus">6 meses de acesso grátis</h3>
-			<!-- <p>calendar flat icon </p> -->
+			<div class="titulo-bonus">
+				<img src="./imagens/infinite2.png" class="imagembonus">
+				<h3 class="titulobonus">6 meses de acesso grátis</h3>
+			</div>
 			<p class="descricaobonus">
 				Ofereço à você mais 6 meses de acesso gratuito a todo conteúdo do curso. Tenha, então, 12 meses de acesso completo ao curso. Todo este tempo te dá muito mais tranquilidade em seus estudos e isto absolutamente vai aumentar e muito seus resultados.
 			</p>
-			<p>Aproveite este incrível bônus!</p>
-			<p>Obs.: Por tempo limitado.</p>
 		</article>
+		<p class="chamadabonus final">
+			Aproveite este incrível bônus! (é por <strong>tempo limitado</strong>)
+		</p>
+
 	</section>
 
 	<!-- <footer>
